# legion-llm-gateway

./: .env.example  .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs
app/: config.py  database.py  main.py
app/models/: schemas.py
app/routers/: gateway.py  ops.py
app/services/: cache.py  embeddings.py  llm.py  router.py  telemetry.py
db/: README.md  reset_demo_database.sql  schema.sql  seed_demo.sql
src/: App.tsx  index.css
src/components/: MetricCard.tsx  RoutingTable.tsx
tests/: test_cache.py  test_gateway.py
